--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "request": "^2.88.0"
+  },
+  "scripts":{
+    "start": "node app.js"
   }
 }
